perf:登录接入后端;feat:新增header头像功能和菜单折叠样式

--- a/src/styles/layout.module.scss
+++ b/src/styles/layout.module.scss
@@ -6,12 +6,27 @@
 }
 
 .menuLogo {
-    height: 5%;
-    margin-top: 3%;
+    padding: 0 5%;
 
     .menuTitle {
-        margin: 0 8px;
-        font-size: 18px;
+        padding: 0 8px;
+        font-size: 16px;
         font-weight: bold;
     }
+}
+
+.layoutHeader,
+.menuLogo {
+    height: 6%;
+    padding: 0 1%;
+    display: flex;
+    align-items: center;
+    background-color: #111;
+    color: #eee;
+}
+
+.layoutFooter {
+    height: 6%;
+    background-color: #111;
+    color: #eee;
 }
