--- a/src/styles/layout.module.scss
+++ b/src/styles/layout.module.scss
@@ -23,6 +23,14 @@
     align-items: center;
     background-color: #111;
     color: #eee;
+
+    .headerBreadCrumb {
+        flex: 1;
+    }
+
+    .headerIcons {
+        gap:2vh;
+    }
 }
 
 .layoutFooter {
