--- a/src/styles/login.module.scss
+++ b/src/styles/login.module.scss
@@ -1,5 +1,5 @@
 .login {
-    height: 100%;
+    height: 100vh;
     background: url(https://www.wled.top/images/wallhaven-wqery6-light.webp) center no-repeat;
     background-size: cover;
     display: flex;
