--- a/src/styles/layout.module.scss
+++ b/src/styles/layout.module.scss
@@ -1,6 +1,10 @@
+:root {
+    --backColor: #111;
+    --textColor: #eee;
+}
+
 .leftMenu {
-    background-color: #fefefe;
-    color: #111;
+    background-color: var(--backColor);
     height: 100vh;
     box-shadow: 0 0 2px rgba(192, 192, 192, 0.3);
 }
@@ -22,8 +26,8 @@
     padding: 0 1%;
     display: flex;
     align-items: center;
-    background-color: #111;
-    color: #eee;
+    background-color: var(--backColor);
+    color: var(--textColor);
 
     .headerBreadCrumb {
         flex: 1;
