--- a/src/styles/layout.module.scss
+++ b/src/styles/layout.module.scss
@@ -50,6 +50,27 @@
     height: 3%;
 }
 
+.menuThemeBox {
+    position: relative;
+    width: 48%;
+    cursor: pointer;
+    box-sizing: border-box;
+    border-radius: 6px;
+    padding: 12px 8px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 8px;
+    transition: all 0.3s;
+}
+
+.menuCheckout {
+    position: absolute;
+    bottom: 8px;
+    right: 8px;
+    color: #1677ff;
+}
+
 .lockRoot {
     width: 100vw;
     height: 100vh;
