--- a/src/styles/login.module.scss
+++ b/src/styles/login.module.scss
@@ -7,23 +7,20 @@
 
     .loginBox {
         margin: 3%;
-        padding: 7%;
+        padding: 0 5%;
         box-sizing: border-box;
         width: 40%;
-        height: auto;
+        height: 90%;
         border-radius: 20px;
         background-color: rgba(255, 255, 255, 0.8);
         box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
+
 
         .loginTitle {
             margin-bottom: 10%;
         }
 
-        .loginForm{
+        .loginForm {
             width: 80%;
         }
 
