--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -10,3 +10,14 @@ body,
 .a {
     cursor: pointer;
 }
+
+.verifyCode {
+    height: 32px;
+    width: 50%;
+    padding: 1px;
+    border-radius: 4px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    user-select: none;
+}
